Fix dark mode background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ body {
 @media (prefers-color-scheme: dark) {
   body {
     color: #FAEFE1;
-    background-color: #FAEFE1;
+    background-color: #0C1618;
   }
 
   a:link {
